--- a/_posts/2017-06-26-.markdown
+++ b/_posts/2017-06-26-.markdown
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "一天可以学会的实用计算机技术"
-subtitle:   "一天可以学会的实用计算机技术"
+subtitle:   ""
 date:       2017-06-26 12:00:00
 author:     ""
 header-img: ""
@@ -15,8 +15,6 @@ tags:
 
 
 
-
-# 一天可以学会的实用计算机技术
 **Technical 技术类**
 
 1. 版本控制 (Version control): Git, GitHub and SVN
