--- a/_posts/2017-06-26-hijack.markdown
+++ b/_posts/2017-06-26-hijack.markdown
@@ -3,7 +3,7 @@ layout:     post
 title:      "某种流量劫持攻击的原理简述和演示"
 subtitle:   ""
 date:       2017-06-26 12:00:00
-author:     ""
+author:     "goobey"
 header-img: ""
 header-mask: 0.3
 catalog:    true
@@ -13,10 +13,8 @@ tags:
     - 原创
 ---
 
-# 某种流量劫持攻击的原理简述和演示
-
 >回顾近几年国内发生的各类恶意劫持事件中，莫过于运营商劫持严重干扰到了个人和企业用户的正常使用和运营。鉴于互联网上已经有大量关于此类攻击的案例分析和阐述，为了完善的防御此类攻击，本文将换一个角度思考和分析，通过具体的劫持实验，从攻击者的立场用通俗的语音来简述过程。
-    即通过旁路设备监听HTTP请求，篡改正常返回的js代码和信息，实现隐蔽的劫持互联网网站计费信息的方案。
+即通过旁路设备监听HTTP请求，篡改正常返回的js代码和信息，实现隐蔽的劫持互联网网站计费信息的方案。
  
 **0x01劫持实验条件准备**
 
@@ -26,11 +24,11 @@ tags:
 
 举例链接如下：
 ```
-- http://u.XXX.com/union/CtripRedirect.aspx?TypeID=2&Allianceid=1234&sid=56789&OUID=abc&jumpUrl=http://www.XXX.com
+http://u.XXX.com/union/CtripRedirect.aspx?TypeID=2&Allianceid=1234&sid=56789&OUID=abc&jumpUrl=http://www.XXX.com
 ```
 红色字体为不同的加盟账户被分配的不同编号，如若该参数被恶意篡改，该用户推广获得的收入分成将转移。
 下图中的红色部分标明了该返回包进行了Set-Cookie计费和跳转。
-![](/img/in-post/post-nextgen-web-pwa/flipkart-2.jpeg)
+![](/img/in-post/hijack/1.jpg)
  
 **0x02劫持过程简述**
 
@@ -38,11 +36,11 @@ tags:
 2. 先于www.XXX.com的服务器返回构造过的TCP包给用户，同时将篡改过的JS内容返回。
 
 注入返回构造过的ga.js代码。详见下面截图：
-![](/img/in-post/post-nextgen-web-pwa/flipkart-2.jpeg)
+![](/img/in-post/hijack/2.jpg)
 执行完成后浏览器效果如下截图：
-![](/img/in-post/post-nextgen-web-pwa/flipkart-2.jpeg)
+![](/img/in-post/hijack/3.jpg)
 统计Cookie植入成功效果见截图：
-![](/img/in-post/post-nextgen-web-pwa/flipkart-2.jpeg)
+![](/img/in-post/hijack/4.jpg)
  
 **0x03劫持原理和特点**
 
