--- a/_posts/2017-06-26-hijack.markdown
+++ b/_posts/2017-06-26-hijack.markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "某种流量劫持攻击的原理简述和演示"
+title:      "某种流量劫持攻击的原理简述和演示（原创）"
 subtitle:   ""
 date:       2017-06-26 12:00:00
 author:     "goobey"
