--- a/_posts/2018-02-09-GDB.markdown
+++ b/_posts/2018-02-09-GDB.markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "用GDB调试PHP及反序列化手记"
+title:      "用GDB调试PHP及反序列化手记(原创）"
 subtitle:   ""
 date:       2018-02-09 12:00:00
 author:     "anqing"
