--- a/_posts/2018-02-09-GDB.markdown
+++ b/_posts/2018-02-09-GDB.markdown
@@ -39,7 +39,7 @@ tags:
 	Zend Engine v2.5.0, Copyright (c) 1998-2014 Zend Technologies
 ```
 
-## 2. 认识几个数据结构: 
+## 2. 几个数据结构: 
  * Zval是PHP中最重要的数据结构之一（另一个比较重要的数据结构是hash table），它包含了PHP中的变量值和类型的相关信息,是一个struct，基本结构为：
 	
 ```
@@ -124,7 +124,7 @@ tags:
 
 
 
-## 3. 看看PHP对象序列化后的数据
+## 3. PHP对象序列化后的数据
  * 通过下面的脚本我们可以生成一个DateTimeZone的一个对象,并打印这个对象序列化后的数据:
 
 ```
@@ -239,7 +239,7 @@ tags:
 
 	可以看到tzobj对象经过初始化后已经被填充了数据,也就是到这一步反序列化恢复对象工作完成了.
 ```	
-## 5. 利用反序列化
+## 5. 反序列化利用
 	
 ```
 	还是用DateTimeZone序列化字符串作为例子, 但是这次作一点小小的修改:
