--- a/_posts/2018-04-20-https.markdown
+++ b/_posts/2018-04-20-https.markdown
@@ -106,7 +106,7 @@ tags:
 1. 猜解某些固定的明文 。譬如请求方法，User-Agent等。这些信息一般是固定的，猜解比较容易。
 2. 对这些明文数据进行填充，使cookie等有效内容的第一位处在某一个分组的最后一位。
 
-![](/img/in-post/https/beast.PNG)
+![](/img/in-post/https/beast.png)
 ​
 
 3. 发送（已知内容+猜解内容）来猜解cookie的第一位。
@@ -118,7 +118,7 @@ tags:
 
 ##### BREACH攻击：
 
-​ 条件： 攻击者可以让任意数据和某些加密数据在同一个上下文中被压缩。r
+​ 条件： 攻击者可以让任意数据和某些加密数据在同一个上下文中被压缩。
 
 ​ 攻击原理：
 
